fix horizontal scroll bar appers in admin

--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@
 
 body {
     background-color: white;
-    width : 100vw;
+    width : 100%;
     min-height : 100vh;
     color : #333333;
 
